Fixed sidebar & top bar menu on mobile

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -446,7 +446,7 @@ $input-border:                  $gray-500 !default;
 $input-border-radius:           $border-radius-small !default;
 $input-border-radius-large:     $border-radius-large !default;
 
-$input-border-focus:            saturate($brand-primary, 25%) !default;
+$input-border-focus:            saturate($eea-brand-primary, 25%) !default;
 $input-border-focus-alpha:      .6 !default;
 $input-shadow-focus-alpha:      .2 !default;
 $input-color-placeholder:       $gray-600 !default;
